fix html and css, visibility password

--- a/src/components/LoginForm/styles.css
+++ b/src/components/LoginForm/styles.css
@@ -58,29 +58,3 @@ p {
     font-weight: 300;
     font-style: normal;
 }
-
-.input-group {
-    position: relative;
-    margin: 20px 0;
-}
-.input-group input {
-    width: 100%;
-    height: 40px;
-    font-size: 1em;
-    color: black;
-    padding: 0 10px 0 5px;
-    background: transparent;
-    border: 1px solid #373636;
-    outline: none;
-    border-radius: 5px;
-}
-.input-group input::placeholder {
-    color: rgba(148, 80, 80, 0.3);
-}
-
-label {
-    font-family: "Lato", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 15px;
-}
